--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "set PORT=3002 && react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && CI=false npm install --legacy-peer-deps && next build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
